style.css
:root{
    --bg: #1c1b1b;
    --primary: #cab049;
    --text: white;
    --muted: #363636;
    --muted-text: rgb(167, 167, 167);
}


.inter {
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  font-weight: normal;
  font-style: normal;
  text-shadow: 
    3px 3px 12px var(--primary);
}

.forum-regular {
  font-family: "Forum", serif;
  font-weight: 400;
  font-style: normal;
}

.cutive-mono-regular {
  font-family: "Cutive Mono", monospace;
  font-weight: 400;
  font-style: normal;
}


html{
    overflow: hidden;
    background-color: var(--bg);
    margin: 0px;
    padding: 0px;
    
}

.hero{
    min-height: 100vh;
    
}

.content{
    /* background-color: var(--bg); */
    /* width: 100dvh; */
    /* height: 50dvh; */
    

    border-radius: 24px;
}

.teks{
    color: var(--text) !important;
}

.bxf{
    color: var(--primary) !important;
    text-shadow: 
    0 0 100px var(--primary);
}

.gambar{
    width: 10dvh;
    
}

.teks-atas{
    color: var(--muted-text) !important;
    font-size: 0.7rem !important;
}

.teks-countdown{
    
    border-top: 4px solid var(--primary);
    color: var(--muted-text);
}

/* css countdown */

    .custom-countdown-theme {
        /* Main countdown container */
        
        background-color: var(--p4);
        /* border-radius: 16px; */
        min-width: 30dvh;
        border-bottom: 4px solid var(--primary);
        margin-top: 0px;
        border-top: 4px solid var(--primary);

    }

    .custom-countdown-theme > .simply-section {
        /* Individual time unit blocks */
        /* background-color: rgb(255, 255, 255); */
        text-align: center;
        /* height: 5dvh; */
        padding: 12px;
        /* border-radius: 16px; */
        /* box-shadow: 0px 6px 6px rgba(2, 0, 31, 0.5); */
        
        
    }

    .custom-countdown-theme > .simply-section > div {
        /* Inner container for amount and word */
        /* border-left: thin solid var(--muted); */
        /* border-right: thin solid var(--muted); */
        padding: 6px;
    }

    .custom-countdown-theme > .simply-section .simply-amount,
    .custom-countdown-theme > .simply-section .simply-word {
        /* Common styles for numbers and labels */
        font-weight: bold;
        
        display: flex;
        flex-direction: column;
    }

    .custom-countdown-theme > .simply-section .simply-amount {
        /* Number display */           
        /* color: var(--);  */
        color: var(--primary);
        font-size: 3rem;
        font-weight: normal;
        font-family: "Inter", sans-serif;
        
    }

    .custom-countdown-theme > .simply-section .simply-word {
        /* Label text */              
        color: var(--muted-text);
        /* font-family: "Cutive Mono", monospace; */
        font-family: "Forum", serif;
        font-weight: normal;
    }

